tests/sksl/errors/ReservedNameFvec4.glsl
### Compilation failed:

error: 1: name 'fvec4' is reserved
int fvec4;
    ^^^^^
1 error
